# f1-discord-app

./: .dockerignore  .env.example  .gitignore  ChangeLog.md  Dockerfile  README.md  app_config.json.example  docker-compose.yml  logging_config.py  main.py  pyproject.toml  test.py
app/: app_config.py  database.py  exceptions.py
app/cogs/: head2head.py  helpers.py  leaderboard.py  live_timing.py
app/services/: head2head.py  leaderboard.py  live_timing.py  models.py  openf1.py
database/: mongo-init.js
database/data/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0--2338431031303415991.wt  collection-10-1948130389872706801.wt  collection-12-1948130389872706801.wt  collection-2--2338431031303415991.wt  collection-4--2338431031303415991.wt  collection-4-1948130389872706801.wt  collection-6-1948130389872706801.wt  collection-7--2338431031303415991.wt  index-1--2338431031303415991.wt  index-11-1948130389872706801.wt  index-13-1948130389872706801.wt  index-3--2338431031303415991.wt  index-5--2338431031303415991.wt  index-5-1948130389872706801.wt  index-6--2338431031303415991.wt  index-7-1948130389872706801.wt  index-8--2338431031303415991.wt  index-9--2338431031303415991.wt  mongo-init.js  sizeStorer.wt
database/data/.mongodb/mongosh/: 6824a67596467fc4dad861df_log  6824a675b6f6e8bf53d861df_log  6824a6765443a9bd72d861df_log  config
database/data/diagnostic.data/: metrics.2025-05-14T14-19-33Z-00000  metrics.2025-05-16T03-24-58Z-00000  metrics.2025-05-16T04-35-03Z-00000  metrics.interim
